# resumeApp

./: .dockerignore  .eslintrc  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile-db  Dockerrun.aws.json  LICENSE.md  Makefile  README.md  app.js  docker-compose.yml  env.yml  package-lock.json  package.json  rancher.yaml  tsconfig.json  tslint.json
.ebextensions/: 01_configure_hosts.config  04configure_app.config
.github/workflows/: actions.yml  branch.yml
api/controllers/: resumeController.js
api/data/: resume.json
api/views/: index.jade  layout.jade
app/: .env.example  app.js  index.js  index.ts
app/config/: .env.example
app/scripts/: init-mongo.js  load_mongo.sh  refreshDockerInstance.sh
app/types/: express-validation.d.ts  koa-views-render.d.ts  koa_extension.ts
data/: resume_data.json
infrastructure/: app.py  cdk.json  pyproject.toml
infrastructure/infrastructure/: infrastructure_stack.py
infrastructure/utils/: get_context.py
public/css/: custom.css
public/js/: googleAnalytics.js
resume-server/: package-lock.json  package.json  serverless.ts
resume-ui/: package.json
resume-ui-simple/: config.yaml
resume-ui-simple/layouts/: index.html  maintenance.html
resume-ui/public/: index.html
resume-ui/src/: App.tsx  EducationSection.tsx  ExperienceItem.tsx  ExperienceSection.tsx  LeadershipItem.tsx  LeadershipSection.tsx  ProjectItem.tsx  ProjectsSection.tsx  ResumeItem.tsx  ResumeSection.tsx  SkillBar.tsx  SkillsSection.tsx  constants.tsx  (+2 more)
resume_server/: Makefile  go.mod  go.sum  serverless.yml
scripts/: deploy_from_jenkins
(+54 files in other folders)
