[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure for Resume App"
authors = ["Alex Friedrichsen <afriedrichsen@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.84.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
